# bootloader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-bt.sh  build-tools.sh  busybox.nix  clean.sh  linux.nix  shell.nix
cfg/: busybox_init
src/: CMakeLists.txt  entry.S  main.cpp
src/boot/: boot.cpp
src/boot/includes/: boot.hpp
src/pcie/: pci_device.cpp  pcie.cpp  virtio.cpp
src/pcie/includes/: pcie.hpp  virtio.hpp  virtio_queues.hpp
src/serial/: serial.cpp
src/serial/includes/: serial.hpp
src/utils/: crc.cpp  dtb.cpp  mmio.cpp  string.cpp
src/utils/includes/: crc.hpp  dtb.hpp  mmio.hpp  string.hpp
